--- a/views/home.html
+++ b/views/home.html
@@ -1,13 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+
 <body>
 
-    <h1>Wolcome to my website</h1>
+    <body>
+
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Navbar</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link " aria-current="page" href="/">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/about">About</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link " href="/services">Services</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+        <h1>Hello, world!</h1>
+
+        <h1>Wolcome to my website Home Page</h1>
+
+
+
+
+
+
+
+
+
+        <!-- Optional JavaScript; choose one of the two! -->
+
+        <!-- Option 1: Bootstrap Bundle with Popper -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+
+        <!-- Option 2: Separate Popper and Bootstrap JS -->
+        <!--
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+        -->
+
+
+        <!-- <h1>Wolcome to my website</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat consequatur quod molestias? Molestias veritatis fugiat minima soluta voluptas culpa vero voluptates omnis, unde sit saepe expedita modi iusto sint harum.
     Illum nostrum aperiam quia odio ea veniam, consequatur, quos ipsum quam temporibus eum assumenda adipisci fugiat modi est. Magni quia iusto harum perferendis fuga et voluptas totam animi asperiores veritatis?
     Voluptate, cum reprehenderit quasi id eligendi tempore asperiores corrupti possimus! Deleniti iste sed mollitia atque nulla provident illo suscipit accusantium, facere eius sit, totam ullam consectetur quod autem sapiente nesciunt.
@@ -37,6 +97,7 @@
     A est nihil earum tempora nostrum laborum aut ipsum fuga pariatur voluptas quaerat inventore voluptatum eaque laboriosam aliquam, voluptatem ut iste. Ullam doloremque itaque rerum laudantium harum asperiores ducimus tempora.
     Maiores dolorum dignissimos sint atque delectus similique quis veniam sunt, quia perspiciatis explicabo incidunt voluptate aspernatur eos, vel magnam fugiat consequuntur eum commodi? Beatae magnam temporibus voluptatem quo minus dolorum?
     Laudantium inventore, consectetur dolor vitae sapiente officia, mollitia harum ipsum velit reiciendis amet voluptatum temporibus? Repudiandae ab sit fugiat totam tempora consectetur quisquam id et maiores aspernatur, deserunt minima error!
-    Officia impedit similique cupiditate recusandae hic neque porro debitis cum amet! Sequi obcaecati aliquid, temporibus velit modi dicta non corporis voluptas deserunt eum, nesciunt, blanditiis eos eveniet doloremque corrupti saepe.</p>
-</body>
+    Officia impedit similique cupiditate recusandae hic neque porro debitis cum amet! Sequi obcaecati aliquid, temporibus velit modi dicta non corporis voluptas deserunt eum, nesciunt, blanditiis eos eveniet doloremque corrupti saepe.</p> -->
+    </body>
+
 </html>
